# eye-controlled-mouse

./: .gitignore  README.md  config.json  eye_cursor_final.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup_repo.sh
.github/workflows/: ci.yml
docs/: DEVELOPMENT.md
src/: __init__.py
src/control/: __init__.py
src/tracking/: __init__.py
src/utils/: __init__.py
tests/: __init__.py  conftest.py  test_example.py
