[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eye-controlled-mouse"
version = "0.1.0"
description = "A desktop application to control the mouse cursor using your eyes, built with Python."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Kabiru JS", email = "your.email@example.com"}]
keywords = ["eye-tracking", "gaze-estimation", "computer-vision", "accessibility"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: System :: Hardware :: Hardware Drivers",
]

dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pyautogui>=0.9.53",
    "mediapipe>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.280",
    "mypy>=1.4.0",
    "bandit>=1.7.5",
]

[project.urls]
Homepage = "https://github.com/kabiru-js/eye-controlled-mouse"
Repository = "https://github.com/kabiru-js/eye-controlled-mouse.git"
Issues = "https://github.com/kabiru-js/eye-controlled-mouse/issues"

[tool.black]
line-length = 100
target-version = ["py39"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "W", "F", "I", "C", "B", "UP"]
ignore = ["E501", "C901"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
ignore_missing_imports = true
